--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,6 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "nocors"
-main = "index.js"
+main = "index.mjs"
 compatibility_date = "2024-08-21"
+[placement]
+mode = "smart"
